[package]
name = "cplibs-hld"
version = "0.1.2"
authors = ["Masooka <masooka@live.com>"]
edition = "2021"
repository = "https://github.com/masooka/cplibs"
license = "0BSD"
publish = false

[lib]
name = "hld"

[dependencies]
ac-library-rs-parted-segtree = { git = "https://github.com/qryxip/ac-library-rs-parted.git", version = "0.1.0" }
